# python-devcontainer

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.devcontainer/: .env.example  Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
